--- a/src/templates/pages/dashboard.html
+++ b/src/templates/pages/dashboard.html
@@ -55,7 +55,7 @@
 
           <!-- XXX Uncomment when feed status is fully implemented 
             
-          <div class="status">
+          <div class="status -owner">
             <div class="feedback-status">
               <img src="{% static 'img/hourglass.svg' %}" alt="">
               <p class="-onhold">Aguardando feedback do deputado</p>
