--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -106,148 +106,53 @@
     {% endfor %}
   {% endif %}
   {% if public_groups %}
+
     {% for public_group in public_groups %}
-    <a href="{% url 'project' public_group.id public_group.document.slug %}" class="document-card{% if not public_group.closing_date|is_open %} -inactive{% endif %}">
-      <div class="header">
-      {% if public_group.closing_date|is_open %}
-        <span class="date">Aberto até {{public_group.closing_date|date:"d/m/Y"}}</span>
-      {% else %}
-        <span class="date">Encerrado em {{public_group.closing_date|date:"d/m/Y"}}</span>
-      {% endif %}
-      </div>
-      <h3 class="js-title">{{ public_group.document.title }}</h3>
-      <p class="js-description">{{ public_group.document.description }}</p>
-      <div class="info">
-        <div class="themes">
+      <a href="{% url 'project' public_group.id public_group.document.slug %}" class="document-card {% if public_group.closing_date|is_open %}-public{% endif %}">
+
+        <ul class="tags">
           {% for theme in public_group.document.themes.all %}
-          <div class="theme">
-            {% if theme.icon %}
-            <img src="{{ theme.icon.url }}" alt="{{ theme.slug }}">
-            {% endif %}
-            <span>{{ theme.name }}</span>
-          </div>
+          <li class="app-tag -theme">
+            <span class="dot" style="background-color: {{ theme.color }}"></span>
+            <span class="label">{{ theme.name }}</span>
+          </li>
           {% endfor %}
+        </ul>
+
+
+        <h3 class="js-title">{{ public_group.document.title }}</h3>
+        <p class="js-description">
+          {{ public_group.document.description }}
+        </p>
+
+
+        <div class="footer">
+          {% if public_group.closing_date|is_open %}
+            <div class="document-progress">
+              <span class="begin">Aberto há <span>{{ public_group.created|absolute_days_since }} dias</span></span>
+              <span class="end">Encerra em <span>{{ public_group.closing_date|absolute_days_since }} dias</span></span>
+
+              <div class="progress-bar">
+                <span class="value" style="transform: scaleX({% progress_time_normalized public_group.created public_group.closing_date %})"></span>
+              </div>
+            </div>
+          {% else %}
+            <div class="status">
+              <p class="closed">Encerrado em {{public_group.closing_date|date:"d/m/Y"}}</p>
+              <!-- Uncomment whenever document feedback status is implemented
+              <div class="feedback-status">
+                <img src="{% static 'img/hourglass.svg' %}" alt="">
+                <p class="-onhold">Aguardando feedback do deputado</p>
+              </div>
+               -->
+            </div>
+          {% endif %}
+          
+          <span class="pseudolink">Acessar</span>
         </div>
-        <div class="suggestions">
-          <div class="suggestion">
-            <span class="value">{{public_group.suggestions.all.count}}</span>
-            <span>Sugestões</span>
-          </div>
-        </div>
-      </div>
-    </a>
+      </a>
     {% endfor %}
-  
-    <!-- 
-    XXX improve cards using this markup
-  
-    <a href="" class="document-card -public">
-  
-      <ul class="tags">
-        {% for theme in document.themes.all %}
-        <li class="app-tag">
-          <span class="dot" style="background-color: {{ theme.color }}"></span>
-          <span class="label">{{ theme.name }}</span>
-        </li>
-        {% endfor %}
-      </ul>
-  
-      <h3 class="js-title">Patrocínio de bancos públicos a clubes de futebol</h3>
-  
-      <p class="js-description">
-        Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.
-      </p>
-  
-      <div class="footer">
-        <div class="document-progress">
-          <span class="begin"><span>3</span> dias atrás</span>
-          <span class="end">Encerra em <span>15</span> dias</span>
-          <div class="progress-bar">
-            <span class="value" style="transform: scaleX(.3)"></span>
-          </div>
-        </div>
-        
-        <span class="pseudolink">Acessar</span>
-      </div>
-  
-    </a>
-  
-  
-    <a href="" class="document-card -onhold">
-  
-      <ul class="tags">
-        <li class="app-tag">
-          <span class="dot"></span>
-          <span class="label">Educação</span>
-        </li>
-        <li class="app-tag">
-          <span class="dot"></span>
-          <span class="label">Educação</span>
-        </li>
-        <li class="app-tag">
-          <span class="dot"></span>
-          <span class="label">Educação</span>
-        </li>
-      </ul>
-  
-      <h3 class="js-title">Patrocínio de bancos públicos a clubes de futebol</h3>
-  
-      <p class="js-description">
-        Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.
-      </p>
-  
-      <div class="footer">
-        <div class="status">
-          <p class="closed">Encerrado em 12/04/2019</p>
-          <div class="feedback-status">
-            <img src="{% static 'img/hourglass.svg' %}" alt="">
-            <p class="-onhold">Aguardando feedback do deputado</p>
-          </div>
-        </div>
-        
-        <span class="pseudolink">Ver</span>
-      </div>
-  
-    </a>
-  
-    <a href="" class="document-card -closed">
-  
-      <ul class="tags">
-        <li class="app-tag">
-          <span class="dot"></span>
-          <span class="label">Educação</span>
-        </li>
-        <li class="app-tag">
-          <span class="dot"></span>
-          <span class="label">Educação</span>
-        </li>
-        <li class="app-tag">
-          <span class="dot"></span>
-          <span class="label">Educação</span>
-        </li>
-      </ul>
-  
-      <h3 class="js-title">Patrocínio de bancos públicos a clubes de futebol</h3>
-  
-      <p class="js-description">
-        Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.
-      </p>
-  
-      <div class="footer">
-        <div class="status">
-          <p class="closed">Encerrado em 12/04/2019</p>
-          <div class="feedback-status">
-            <img src="{% static 'img/feedback.svg' %}" alt="">
-            <p class="">Confira o feedback do deputado</p>
-          </div>
-        </div>
-        
-        <span class="pseudolink">Ver</span>
-      </div>
-  
-    </a>
-    -->
-  
+
   </div>
   {% endif %}
 </main>
