Feature/new cards (#126)
* Update icons

* Add new components

* Refactor simple-card [WIP]

* Remove unnecessary property

* Add icons

* Refactor svg

* Refactor simple-card [WIP]

* Add feedback status

* Remove unnecessary properties

* Remove properties

* Add orange color

* Modify global line-height

* Use real elements instead of pseudo elements for theme dot

* add templatetag to show opinions count

* add template tag to get participation group id

* Remove unnecessary markup from dashboard and cleanup card styles

* Add new date tags

* Finish up document card

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -22,7 +22,7 @@
 @import 'components/nav-burger';
 @import 'components/nav-menu';
 @import 'components/projects-list';
-@import 'components/simple-card';
+@import 'components/document-card';
 @import 'components/voting-action';
 @import 'components/app-button';
 @import 'components/text-highlight';
@@ -39,6 +39,10 @@
 @import 'components/submitted-opinion';
 @import 'components/document-form';
 @import 'components/theme-tag';
+@import 'components/app-tag';
+@import 'components/document-progress';
+@import 'components/feedback-status';
+@import 'components/progress-bar';
 @import 'components/section-group';
 @import 'components/input-profile';
 @import 'components/user-profile';
