Create suggestion metrics

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -68,6 +68,7 @@
 @import 'components/dropdown-menu';
 @import 'components/breadcrumb-menu';
 @import 'components/page-minimap';
+@import 'components/sugestion-metrics';
 
 // Vendor
 @import 'vendor/tooltip';
