--- a/src/templates/components/cluster-sidebar.html
+++ b/src/templates/components/cluster-sidebar.html
@@ -1,8 +1,12 @@
+{% load staticfiles %}
+
 <aside class="side-bar">
   <div class="header">
-    <h3>Grupos de Opiniões Similares</h3>
-    <div class="filter"></div>
+    <h3>Opiniões</h3>
+    <div class="action">Votos</div>
+    <div class="action -disable">Consenso</div>
+    <div class="action -disable">Dissenso</div>
   </div>
-  <div class="clusters js-clusters"></div>
+  <div class="sugestion-metrics js-clusters"></div>
   <div class="toggle js-toggleButton"></div>
 </aside>
