--- a/src/templates/components/clusters.html
+++ b/src/templates/components/clusters.html
@@ -1,41 +1,34 @@
 {% load static participations_tags %}
 
-{% for cluster in clusters %}
-<div class="cluster js-suggestionCluster">
-  <div class="content">
-    <div class="count">
-      <span class="value">{{ cluster|length }}</span>
-      <span>Opiniões</span>
+{% for sugestion in sugestions %}
+<div class="card">
+  <div class="header">
+    <span class="votes">{{ sugestion.votes.all|length }} VOTOS</span>
+    <div class="consensus">
+      <div class="icon">
+        <span class="value" style="width: 60%;"></span>
+      </div>
+      <span class="info">48% consenso</span>
     </div>
-    <p class="text">{{ cluster.0.content }}</p>
   </div>
-  <ul class="opinions">
-    {% for suggestion in cluster %}
-    <div class="opinion js-opinion" data-opinion-id="{{suggestion.id}}">
-      <div class="avatar">
-        {% if suggestion.author.avatar %}
-        <img src="{{ suggestion.author.avatar }}" alt="Usuário">
-        {% else %}
-        <img src="{% static 'img/avatar.png' %}" alt="Usuário">
-        {% endif %}
-      </div>
-      <div class="content">
-        <div class="header">
-          <span class="name">{{ suggestion.author.get_full_name }}</span>
-          <span class="date">{{ suggestion.created|date:'H:i - d \d\e b' }}</span>
-        </div>
-        <p class="text">
-          {{ suggestion.content }}
-        </p>
-        <div class="votes">
-          <span class="vote -reject">{{suggestion.votes|count_votes:"reject"}}</span>
-          <span class="vote -neutral">{{suggestion.votes|count_votes:"neutral"}}</span>
-          <span class="vote -approve">{{suggestion.votes|count_votes:"approve"}}</span>
-        </div>
-      </div>
+  <div class="content">
+    <div class="user">
+      <img src="{% if suggestion.author.profile.avatar %}{{ suggestion.author.profile.avatar }} {% else %} {% static 'img/avatar.png' %} {% endif %}" class="avatar" alt="Usuário">
+      <span class="name">{{ sugestion.author }}</span>
     </div>
-    {% endfor %}
-  </ul>
+    <p class="sugestion">{{ sugestion.content }}</p>
+  </div>
+  <div class="votes">
+    <div class="bar -positive" style="width: 58%;">
+      <span class="value">12</span>
+    </div>
+    <div class="bar -neutral" style="width: 12%;">
+      <span class="value">3</span>
+    </div>
+    <div class="bar -negative" style="width: 30%;">
+      <span class="value">8</span>
+    </div>
+  </div>
 </div>
 {% empty %}
   Sem sugestões
