Create suggestion metrics

--- a/src/templates/components/cluster-sidebar.html
+++ b/src/templates/components/cluster-sidebar.html
@@ -7,6 +7,6 @@
     <div class="action -disable">Consenso</div>
     <div class="action -disable">Dissenso</div>
   </div>
-  <div class="sugestion-metrics js-clusters"></div>
+  <div class="suggestion-metrics js-clusters"></div>
   <div class="toggle js-toggleButton"></div>
 </aside>
