--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -55,13 +55,11 @@
       styles: {
           '.js-documentTitle, .js-documentDescription': 'rgba(0,0,0,0.08)',
           '.js-documentExcerpt': 'rgba(0,0,0,0.08)',
-          '.-first': 'hsla(275, 120%, 90%, 1)',
-          '.-second': 'hsla(275, 120%, 80%, 1)',
-          '.-third': 'hsla(275, 120%, 70%, 1)',
-          '.-fourth': 'hsla(275, 120%, 60%, 1)',
-          '.-fifth': 'hsla(275, 120%, 50%, 1)',
-          // 'h1,a': 'rgba(0,0,0,0.10)',
-          // 'h2,h3,h4': 'rgba(0,0,0,0.08)'
+          '.js-relevanceAmount1': 'hsla(275, 120%, 90%, 1)',
+          '.js-relevanceAmount2': 'hsla(275, 120%, 80%, 1)',
+          '.js-relevanceAmount3': 'hsla(275, 120%, 70%, 1)',
+          '.js-relevanceAmount4': 'hsla(275, 120%, 60%, 1)',
+          '.js-relevanceAmount5': 'hsla(275, 120%, 50%, 1)',
       },
       back: 'rgba(0,0,0,0.03)',
       view: 'rgba(0,0,0,0.05)',
