--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -31,6 +31,10 @@
       <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
+        <span class="votes">
+          <span class="value">23</span>
+          votos
+        </span>
       </p>
       {% endif %}
     {% endif %}
