--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -151,8 +151,10 @@
 <script src="{% static 'js/components/navBar/view.js' %}"></script>
 <script src="{% static 'js/pages/editDocument.js' %}"></script>
 {% elif page == 'clusters' %}
+<script src="{% static 'js/vendor/pagemap-1.2.0.min.js' %}"></script>
 <script src="{% static 'js/components/reduceExcerpts/view.js' %}"></script>
 <script src="{% static 'js/components/clusters/view.js' %}"></script>
+<script src="{% static 'js/components/pageMinimap/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
 <script src="{% static 'js/pages/clustersDocument.js' %}"></script>
 {% endif %}
