--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -1,6 +1,6 @@
-{% load projects_tags participations_tags %}
+{% load staticfiles projects_tags participations_tags %}
 
-<article>
+<article id="article">
   <header>
     {% now "Y-m-d" as todays_date %}
     {% if group.closing_date|date:"Y-m-d" > todays_date %}
@@ -8,26 +8,28 @@
     {% else %}
     <span class="date -inactive">Encerrado em {{group.closing_date|date:'d/m/Y'}}</span>
     {% endif %}
-    <h1 contentEditable="true">{{ object.title }}</h1>
-    <p class="description">{{ object.description }}</p>
+    <h1 class="js-documentTitle" contentEditable="true">{{ object.title }}</h1>
+    <p class="js-documentDescription description">{{ object.description }}</p>
     <hr>
   </header>
+  <canvas class="page-minimap js-pageMinimap"></canvas>
   {% for excerpt in group.get_excerpts %}
     {% if excerpt.excerpt_type.align_center %}
     <div class="excerpt-wrapper {% excerpt_classes excerpt%}">
-      <h3>{% excerpt_numbering excerpt %}</h3>
+      <h3 class="js-excerptNumbering">{% excerpt_numbering excerpt %}</h3>
       <h3>{{ excerpt.content|safe }}</h3>
     </div>
     {% else %}
       {% to_reduce group excerpt as reduce %}
       {% if reduce %}
       <p class="excerpt-wrapper {% excerpt_classes excerpt %} -reduce js-excerptWrapper">
-        <b>{% excerpt_numbering excerpt %}</b>
+        <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         <span class="js-defaultText">...</span>
+        {% include "components/document-excerpt.html" with excerpt=excerpt %}
       </p>
       {% else %}
       <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
-        <b>{% excerpt_numbering excerpt %}</b>
+        <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
       </p>
       {% endif %}
