--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -26,13 +26,17 @@
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         <span class="js-defaultText">...</span>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
+        <span class="votes">
+          <span class="value">{{excerpt|exerpt_votes}}</span>
+          votos
+        </span>
       </p>
       {% else %}
       <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
         <span class="votes">
-          <span class="value">23</span>
+          <span class="value">{{excerpt|exerpt_votes}}</span>
           votos
         </span>
       </p>
