Fix version href
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/dropdown-version-list.html
+++ b/src/templates/components/dropdown-version-list.html
@@ -1,4 +1,4 @@
-<a href="href="{% url 'document_editor_cluster' 'editor' object.id %}"">
+<a href="{% url 'document_editor_cluster' 'editor' object.id %}">
   <span>Minhas Versões</span>
   <div class="info">
     <div class="item -versions">{{ object.named_versions.count }}</div>
