--- a/src/templates/components/timeline-sidebar.html
+++ b/src/templates/components/timeline-sidebar.html
@@ -1,7 +1,7 @@
 <aside class="side-bar">
   <div class="header">
     <h3>Minhas Versões</h3>
-    <div class="action">Comparar</div>
+    <div class="action js-compareVersionAction js-compare">Comparar</div>
   </div>
   <ol class="version-timeline js-timelineSidebar">
     {% include "components/versions-list.html" %}
