Set intiial checked version
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/versions-list.html
+++ b/src/templates/components/versions-list.html
@@ -4,7 +4,7 @@
       <h2 class="title">Versão Atual</h2>
 
       <div class="compare-checkbox _hidden js-compareCheckbox">
-        <input id="checkbox" type="checkbox" />
+        <input id="checkbox" class="js-checkboxElement" type="checkbox" />
         <label for="checkbox">
           <span></span>
         </label>
@@ -27,7 +27,7 @@
       <span class="date">{{version.created|date:'d \d\e b, Y'}}</span>
 
       <div class="compare-checkbox _hidden js-compareCheckbox">
-        <input id="checkbox" type="checkbox" />
+        <input id="checkbox" class="js-checkboxElement" type="checkbox" />
         <label for="checkbox">
           <span></span>
         </label>
