--- a/src/templates/components/opinions-metrics.html
+++ b/src/templates/components/opinions-metrics.html
@@ -1,9 +1,9 @@
 {% load static participations_tags %}
 
-{% for suggestion in suggestions %}
-<div class="card">
+{% for opinion in opinions %}
+<div class="card js-suggestionOpinion" data-opinion-id="{{opinion.id}}">
   <div class="header">
-    <span class="votes">{{ sugestion.votes.all|length }} VOTOS</span>
+    <span class="votes">{{ opinion.votes.all|length }} VOTOS</span>
     <div class="consensus">
       <div class="icon">
         <span class="value" style="width: 60%;"></span>
@@ -13,21 +13,21 @@
   </div>
   <div class="content">
     <div class="user">
-      <img src="{% if suggestion.author.profile.avatar %}{{ suggestion.author.profile.avatar }} {% else %} {% static 'img/avatar.png' %} {% endif %}" class="avatar" alt="Usuário">
-      <span class="name">{{ sugestion.author }}</span>
+      <img src="{% if opinion.author.profile.avatar %}{{ opinion.author.profile.avatar }} {% else %} {% static 'img/avatar.png' %} {% endif %}" class="avatar" alt="Usuário">
+      <span class="name">{{ opinion.author }}</span>
     </div>
-    <p class="sugestion">{{ sugestion.content }}</p>
+    <p class="sugestion">{{ opinion.content }}</p>
   </div>
   <div class="votes">
-    {% if suggestion.votes.all %}
+    {% if opinion.votes.all %}
     <div class="bar -positive" style="width: 58%;">
-      <span class="value">{{suggestion.votes.all|count_votes:'approve'}}</span>
+      <span class="value">{{opinion.votes.all|count_votes:'approve'}}</span>
     </div>
     <div class="bar -neutral" style="width: 12%;">
-      <span class="value">{{suggestion.votes.all|count_votes:'neutral'}}</span>
+      <span class="value">{{opinion.votes.all|count_votes:'neutral'}}</span>
     </div>
     <div class="bar -negative" style="width: 30%;">
-      <span class="value">{{suggestion.votes.all|count_votes:'reject'}}</span>
+      <span class="value">{{opinion.votes.all|count_votes:'reject'}}</span>
     </div>
     {% else %}
     <div class="bar -positive" style="width: 58%;">
