--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -27,7 +27,7 @@
         <span class="js-defaultText">...</span>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
         <span class="votes">
-          <span class="value">{{excerpt|exerpt_votes}}</span>
+          <span class="value">{{excerpt|exerpt_votes:group}}</span>
           votos
         </span>
       </p>
@@ -36,7 +36,7 @@
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
         <span class="votes">
-          <span class="value">{{excerpt|exerpt_votes}}</span>
+          <span class="value">{{excerpt|exerpt_votes:group}}</span>
           votos
         </span>
       </p>
