--- a/src/templates/components/timeline-sidebar.html
+++ b/src/templates/components/timeline-sidebar.html
@@ -2,6 +2,7 @@
   <div class="header">
     <h3>Minhas Versões</h3>
     <div class="action js-compareVersionAction js-compare">Comparar</div>
+    <button class="app-button -red _hidden js-showDiff">Vai</button>
   </div>
   <ol class="version-timeline js-timelineSidebar">
     {% include "components/versions-list.html" %}
