Improve suggestion metrics

--- a/src/static/scss/components/_suggestion-metrics.scss
+++ b/src/static/scss/components/_suggestion-metrics.scss
@@ -44,6 +44,8 @@
     width: 100%;
     padding: 1.6rem;
 
+    cursor: pointer;
+
     border: 1px solid $color-grayish;
     background-color: #FFF;
 
