--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -26,10 +26,12 @@
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         <span class="js-defaultText">...</span>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
+        {% if excerpt|exerpt_votes:group > 0 %}
         <span class="votes">
           <span class="value">{{excerpt|exerpt_votes:group}}</span>
           votos
         </span>
+        {% endif %}
       </p>
       {% else %}
       <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
