Add visual cue for keyboard shortcuts

--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -1,14 +1,14 @@
 <div class="contextual-toolbar js-contextualToolbar _hidden">
   <div class="js-typeList list">
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="titulo">Título</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="capitulo">Capítulo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="secao">Seção</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="subsecao">Subseção</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="continuacao">Continuação</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="artigo">Artigo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="paragrafo">Parágrafo</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="inciso">Inciso</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="alinea">Alínea</button>
-    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="item">Item</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="titulo"><span class="shortcut">T</span>ítulo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="capitulo"><span class="shortcut">C</span>apítulo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="secao"><span class="shortcut">S</span>eção</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="subsecao">S<span class="shortcut">u</span>bseção</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="continuacao">C<span class="shortcut">o</span>ntinuação</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="artigo"><span class="shortcut">A</span>rtigo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="paragrafo"><span class="shortcut">P</span>arágrafo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="inciso"><span class="shortcut">I</span>nciso</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="alinea">A<span class="shortcut">l</span>ínea</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="item">It<span class="shortcut">e</span>m</button>
   </div>
 </div>
