--- a/src/static/scss/components/_contextual-toolbar.scss
+++ b/src/static/scss/components/_contextual-toolbar.scss
@@ -51,4 +51,9 @@
     color: $color-deep-gray;
     background-color: hsla(0, 0%, 95%, 1);
   }
+
+  & > .list > .item > .shortcut {
+    text-decoration: underline;
+    font-weight: 600;
+  }
 }
