--- a/src/static/scss/components/_contextual-toolbar.scss
+++ b/src/static/scss/components/_contextual-toolbar.scss
@@ -12,9 +12,12 @@
   border-radius: .25rem;
   background-color: white;
   box-shadow: 2px 2px 9px 0 hsla(0, 0%, 50%, .3);
+  transition: border-color 0.1s ease, box-shadow 0.1s ease;
 
   &.-error {
     border-color: $color-red;
+    animation: shake 0.1s 2 ease;
+    box-shadow: 0px 0px 10px 2px hsla(0, 77%, 66%, 0.4);
   }
 
   & > .list {
